# as2_knowledge_graphs_msgs

./: CMakeLists.txt  README.md  package.xml
srv/: CreateEdge.srv  CreateNode.srv  ReadEdgeGraph.srv  ReadGraph.srv  ReadProperty.srv
